changed the 'article' content type to 'post'

--- a/api/category/models/category.settings.json
+++ b/api/category/models/category.settings.json
@@ -13,9 +13,9 @@
     "name": {
       "type": "string"
     },
-    "articles": {
+    "posts": {
       "via": "category",
-      "collection": "article"
+      "collection": "post"
     }
   }
 }
