--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -1,9 +1,8 @@
 {
   "kind": "collectionType",
-  "collectionName": "articles",
+  "collectionName": "posts",
   "info": {
-    "name": "article",
-    "description": ""
+    "name": "post"
   },
   "options": {
     "increments": true,
@@ -29,12 +28,12 @@
       "required": true
     },
     "published_on": {
-      "required": true,
-      "type": "date"
+      "type": "date",
+      "required": true
     },
     "category": {
       "model": "category",
-      "via": "articles"
+      "via": "posts"
     }
   }
 }
