--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "posts",
   "info": {
-    "name": "post"
+    "name": "post",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -34,6 +35,10 @@
     "category": {
       "model": "category",
       "via": "posts"
+    },
+    "author": {
+      "type": "string",
+      "required": true
     }
   }
 }
